[project]
    authors         = [{ name = "insleker", email = "existedinnettw@gmail.com" }]
    dependencies    = [
    "grpcio",
    "protobuf>=6.32.0",
]
    description     = "A scripting framework open to end user to ensure they follow puppemon requirement."
    name            = "puppemon-py-script"
    readme          = "README.md"
    requires-python = ">=3.9, <4"
    version         = "0.1.0"

[dependency-groups]
    dev = ["grpcio-tools>=1.73.0,<2.0.0", "ruff>=0.11.5,<0.12"]

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.12,<0.9.0"]
